data/all_generated_tests/raw_wast_tests/nop_InvalidorInconsistentControlFlowGraph_498.wast
;; 9. **Test Description**: Construct a sequence with alternating `nop` and valid instructions, checking for stack operations' integrity throughout.    **Constraint Checked**: `nop` doesn’t disrupt stack state.    **Relation to CFG**: Validates the continuous stack state remains intact and branches or stack handling are unaffected.

(assert_invalid
  (module
    (func $nop_test
      i32.const 10
      nop
      i32.const 20
      nop
      i32.add
      i32.const 30
      nop
      i32.mul
    )
  )
  "type mismatch"
)